[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/Furnace/Furnace.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/MenuTitle.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Images/Inventory UI/trash/trash bottom.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/inventory_icons/Resource/coal.png" type="Texture" id=4]
[ext_resource path="res://InventoryLogic/Slot.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/Inventory UI/trash/trash top.png" type="Texture" id=6]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Images/Misc/Buttons/exit button.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Inventory UI/Workbench/workbench menu.png" type="Texture" id=9]

[node name="Furnace" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="BackgroundButton" type="Button" parent="."]
margin_left = -571.0
margin_top = -382.0
margin_right = 639.0
margin_bottom = 398.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ItemDescription" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -274.0
margin_right = 317.0
margin_bottom = 274.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="Title" type="Label" parent="."]
margin_left = -283.0
margin_top = -249.0
margin_right = 502.0
margin_bottom = -108.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "Furnace:"
clip_text = true

[node name="HotbarSlots" type="GridContainer" parent="."]
margin_left = -283.0
margin_top = 68.0
margin_right = 284.0
margin_bottom = 122.0
custom_constants/vseparation = 6
custom_constants/hseparation = 3
columns = 10

[node name="Slot1" type="Panel" parent="HotbarSlots"]
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot2" type="Panel" parent="HotbarSlots"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot3" type="Panel" parent="HotbarSlots"]
margin_left = 114.0
margin_right = 168.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot4" type="Panel" parent="HotbarSlots"]
margin_left = 171.0
margin_right = 225.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot5" type="Panel" parent="HotbarSlots"]
margin_left = 228.0
margin_right = 282.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot6" type="Panel" parent="HotbarSlots"]
margin_left = 285.0
margin_right = 339.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot7" type="Panel" parent="HotbarSlots"]
margin_left = 342.0
margin_right = 396.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot8" type="Panel" parent="HotbarSlots"]
margin_left = 399.0
margin_right = 453.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot9" type="Panel" parent="HotbarSlots"]
margin_left = 456.0
margin_right = 510.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot10" type="Panel" parent="HotbarSlots"]
margin_left = 513.0
margin_right = 567.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="InventorySlots" type="GridContainer" parent="."]
margin_left = -283.0
margin_top = 128.0
margin_right = 284.0
margin_bottom = 182.0
custom_constants/vseparation = 6
custom_constants/hseparation = 3
columns = 10

[node name="Slot1" type="Panel" parent="InventorySlots"]
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot2" type="Panel" parent="InventorySlots"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot3" type="Panel" parent="InventorySlots"]
margin_left = 114.0
margin_right = 168.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot4" type="Panel" parent="InventorySlots"]
margin_left = 171.0
margin_right = 225.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot5" type="Panel" parent="InventorySlots"]
margin_left = 228.0
margin_right = 282.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot6" type="Panel" parent="InventorySlots"]
margin_left = 285.0
margin_right = 339.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot7" type="Panel" parent="InventorySlots"]
margin_left = 342.0
margin_right = 396.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot8" type="Panel" parent="InventorySlots"]
margin_left = 399.0
margin_right = 453.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot9" type="Panel" parent="InventorySlots"]
margin_left = 456.0
margin_right = 510.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Slot10" type="Panel" parent="InventorySlots"]
margin_left = 513.0
margin_right = 567.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="FurnaceSlots" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="OreSlot" type="Panel" parent="FurnaceSlots"]
margin_left = -127.0
margin_top = -166.0
margin_right = -73.0
margin_bottom = -112.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="CoalSlot" type="Panel" parent="FurnaceSlots"]
margin_left = -126.0
margin_top = -90.0
margin_right = -72.0
margin_bottom = -36.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="FurnaceSlots/CoalSlot"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 3.0
margin_top = 3.0
margin_right = 51.0
margin_bottom = 51.0
texture = ExtResource( 4 )
expand = true

[node name="YieldSlot" type="Panel" parent="FurnaceSlots"]
margin_left = 71.0
margin_top = -132.0
margin_right = 125.0
margin_bottom = -78.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 5 )

[node name="Trash" type="Control" parent="."]
margin_left = 7.0
margin_top = -279.0
margin_right = 7.0
margin_bottom = -279.0

[node name="Bottom" type="Sprite" parent="Trash"]
position = Vector2( 381, 398 )
texture = ExtResource( 3 )

[node name="Top" type="Sprite" parent="Trash"]
position = Vector2( 413, 386 )
texture = ExtResource( 6 )
offset = Vector2( -32, -21 )

[node name="TrashButton" type="Button" parent="Trash"]
margin_left = 340.0
margin_top = 344.0
margin_right = 421.0
margin_bottom = 446.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = -274.0
margin_right = 392.0
margin_bottom = -202.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 8 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Trash/TrashButton" to="." method="_on_TrashButton_mouse_entered"]
[connection signal="mouse_exited" from="Trash/TrashButton" to="." method="_on_TrashButton_mouse_exited"]
[connection signal="pressed" from="Trash/TrashButton" to="." method="_on_TrashButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
